--- a/Conditionals and Loops.ipynb
+++ b/Conditionals and Loops.ipynb
@@ -2,82 +2,147 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5f994458-eb08-4b3d-a79d-1070fed0c0bb",
+   "id": "36038bbb-e43c-489e-bae9-e4cb4de74b95",
    "metadata": {},
    "source": [
-    "# 6. Logic & Control Flow\n",
+    "#  Conditionals and Loops\n",
     "\n",
-    "<div style=\"background-color: #e7f3fe; border-left: 6px solid #2196F3; padding: 15px; margin-bottom: 20px;\">\n",
-    "<strong>📘 Definition:</strong> Control flow allows programs to make decisions (\"branching\") and repeat tasks (\"iteration\"). This transforms a calculator into a smart algorithm.\n",
-    "</div>\n",
-    "\n",
-    "## 1. Conditional Statements (`if`, `elif`, `else`)\n",
-    "Python executes code blocks based on whether a condition is `True` or `False`.\n",
-    "\n",
-    "* **Syntax:**\n",
-    "    ```python\n",
-    "    if condition_1:\n",
-    "        # Runs if condition_1 is True\n",
-    "    elif condition_2:\n",
-    "        # Runs if condition_1 was False AND condition_2 is True\n",
-    "    else:\n",
-    "        # Runs if ALL above were False\n",
-    "    ```\n",
-    "\n",
-    "\n",
-    "\n",
-    "<div style=\"background-color: #ffcccc; border-left: 6px solid #f44336; padding: 15px; margin-bottom: 20px;\">\n",
-    "<strong>⚠️ Indentation Rule</strong><br>\n",
-    "Python uses <strong>whitespace</strong> to define blocks of code.\n",
-    "<ul>\n",
-    "    <li>You must indent the code inside the `if` block (usually 4 spaces).</li>\n",
-    "    <li>All lines in the same block must have the <strong>exact same</strong> indentation.</li>\n",
-    "</ul>\n",
-    "</div>\n",
+    "This chapter focuses on controlling the \"flow\" of a program—making decisions with logic and repeating tasks with loops.\n",
     "\n",
     "---\n",
     "\n",
-    "## 2. Boolean Logic\n",
-    "Logic gates return a `bool` type: `True` or `False`.\n",
+    "## 6.1 Conditionals (Making Decisions)\n",
     "\n",
-    "### Comparison Operators\n",
-    "| Symbol | Meaning | Example | Result |\n",
-    "| :--- | :--- | :--- | :--- |\n",
-    "| `==` | Equal to | `5 == 5` | `True` |\n",
-    "| `!=` | Not equal | `5 != 3` | `True` |\n",
-    "| `>` | Greater than | `5 > 10` | `False` |\n",
-    "| `>=` | Greater/Equal | `5 >= 5` | `True` |\n",
+    "Conditionals allow the program to execute different blocks of code based on whether a condition is `True` or `False`.\n",
     "\n",
-    "### Logical Operators\n",
-    "| Symbol | Meaning | Example |\n",
-    "| :--- | :--- | :--- |\n",
-    "| `and` | Both must be True | `(x > 0) and (x < 10)` |\n",
-    "| `or` | At least one is True | `(x == 0) or (x == 1)` |\n",
-    "| `not` | Reverses the result | `not (5 > 3)` → `False` |\n",
+    "### 1. The if, elif, and else Structure\n",
     "\n",
-    "> ⚠️ **The Assignment Trap:**\n",
-    "> * `a = 5` Sets `a` to 5 (**Assignment**)\n",
-    "> * `a == 5` Asks \"Is `a` 5?\" (**Comparison**)\n",
+    "- **`if` statement**: The entry point. Checks a condition; if `True`, runs the indented block.\n",
+    "- **`elif` (else if)**: Checks a new condition only if the previous `if` (or `elif`) was `False`. You can have multiple `elif` blocks.\n",
+    "- **`else`**: The catch-all. Runs only if all preceding conditions were `False`.\n",
     "\n",
-    "---\n",
-    "\n",
-    "## 3. The `while` Loop (Conditional)\n",
-    "Repeats a block of code as long as a condition remains `True`.\n",
-    "\n",
-    "* **Use Case:** When you don't know how many times you need to loop (e.g., finding a root, waiting for user input).\n",
-    "* **Risk:** Infinite loops. Ensure the condition eventually becomes `False`.\n",
-    "\n",
+    "**Syntax:**\n",
     "```python\n",
-    "x = 0\n",
-    "while x < 5:\n",
-    "    print(x)\n",
-    "    x += 1  # Crucial: Update x so the loop eventually ends\n"
+    "if condition_1:\n",
+    "    # Runs if condition_1 is True\n",
+    "elif condition_2:\n",
+    "    # Runs if condition_1 is False AND condition_2 is True\n",
+    "else:\n",
+    "    # Runs if both are False\n",
+    "```\n",
+    "\n",
+    "### 2. Indentation\n",
+    "\n",
+    "- Python uses **indentation** (whitespace) to define blocks of code.\n",
+    "- Standard practice is **4 spaces**.\n",
+    "- All lines in the same block must have the **exact same indentation**.\n",
+    "\n",
+    "### 3. Boolean Logic\n",
+    "\n",
+    "#### Comparison Operators:\n",
+    "- `==` (Equal to) vs. `=` (Assignment) — Be careful not to confuse these!\n",
+    "- `!=` (Not equal to)\n",
+    "- `<`, `<=`, `>`, `>=`\n",
+    "\n",
+    "#### Logical Operators:\n",
+    "- `and`: `True` only if both sides are `True`.\n",
+    "- `or`: `True` if at least one side is `True`.\n",
+    "- `not`: Reverses the boolean value.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 6.2 Loops (Repetition)\n",
+    "\n",
+    "Loops allow you to repeat code efficiently.\n",
+    "\n",
+    "### 1. while Loops\n",
+    "\n",
+    "- **Function**: Repeats a block of code as long as a condition remains `True`.\n",
+    "- **Best for**: When you don't know in advance how many times you need to loop (e.g., finding a solution by trial and error).\n",
+    "- **Risk**: If the condition never becomes `False`, you create an **Infinite Loop** (use `Ctrl+C` to stop it).\n",
+    "\n",
+    "### 2. for Loops\n",
+    "\n",
+    "- **Function**: Iterates over a sequence (like a list, string, or array), assigning each item to a dummy variable one by one.\n",
+    "- **Best for**: Iterating through data.\n",
+    "\n",
+    "#### Key Helpers:\n",
+    "- `range(start, stop, step)`: Generates a sequence of integers.\n",
+    "- `enumerate(sequence)`: Returns both the index (counter) and the value for each item.\n",
+    "\n",
+    "### 3. Loop Control Statements\n",
+    "\n",
+    "- **`break`**: Immediately terminates the loop and moves to the code following it.\n",
+    "- **`continue`**: Skips the rest of the current iteration and jumps back to the top of the loop for the next item.\n",
+    "\n",
+    "### 4. Loops vs. Arrays (Important!)\n",
+    "\n",
+    "- **Performance**: Python `for` loops are relatively slow for heavy math.\n",
+    "- **Best Practice**: Whenever possible, use **NumPy array operations** (vectorization) instead of loops. They are significantly faster (e.g., 100x faster) because they run in optimized C code.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da5246a0-d87d-4aea-9384-9af3bc31437c",
+   "metadata": {},
+   "source": [
+    "# 🧪Question-1: Chemical Analysis \n",
+    "\n",
+    "Imagine you have a list of pH sensor readings from various samples. You need to write a script that automatically classifies each reading.\n",
+    "\n",
+    "## Here is your data:\n",
+    "```python\n",
+    "ph_readings = [7.0, 3.2, 11.5, 7.0, 5.5]\n",
+    "```\n",
+    "\n",
+    "## Your Task:\n",
+    "\n",
+    "Create a loop that goes through each number in `ph_readings` and prints a label based on these rules:\n",
+    "\n",
+    "- **Acidic**: pH < 7.0\n",
+    "- **Basic**: pH > 7.0\n",
+    "- **Neutral**: pH == 7.0\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "60c63db3-71df-481b-a893-191f6c260eba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ph Value :7.0 :Neautral\n",
+      "ph Value :3.2 :Acidic\n",
+      "ph Value :11.5 :Basic\n",
+      "ph Value :7.0 :Neautral\n",
+      "ph Value :5.5 :Acidic\n"
+     ]
+    }
+   ],
+   "source": [
+    "#solution \n",
+    "ph_readings = [7.0, 3.2, 11.5, 7.0, 5.5]\n",
+    "\n",
+    "for ph in ph_readings:\n",
+    "    if ph < 7.0:\n",
+    "        print(f\"ph Value :{ph} :Acidic\")\n",
+    "    elif ph > 7.0:\n",
+    "        print(f\"ph Value :{ph} :Basic\")\n",
+    "    else:\n",
+    "        print(f\"ph Value :{ph} :Neautral\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae1d3ded-11d4-4ce6-94a8-32c5c0fa0c26",
+   "id": "eeec5be5-eed5-47fd-8c31-025faa96b869",
    "metadata": {},
    "outputs": [],
    "source": []
