--- a/04_Functions.ipynb
+++ b/04_Functions.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "0ad3d289-04c7-488e-bbf4-fffb813cce17",
    "metadata": {},
    "outputs": [
@@ -233,14 +233,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter a velocity (m/sec) 500\n"
+      "Enter a velocity (m/sec) 0.00005\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Flow is Turbulant\n"
+      "Flow is Laminar\n"
      ]
     }
    ],
@@ -265,15 +265,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fc506469-7807-41a0-8b15-e049404871e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Velocities: [5.e-03 5.e-01 1.e-02 1.e+01]\n",
+      "Flow Types: ['Laminar' 'Turbulent' 'Laminar' 'Turbulent']\n"
+     ]
+    }
+   ],
    "source": [
     "# But in question we have given an set of array \n",
-    "velocities = np.array([0.01, 0.02, 0.5, 1.0])\n",
     "\n",
-    "# so we are using for loops "
+    "import numpy as np\n",
+    "\n",
+    "def calc_reynolds(v, rho=1000, mu=0.001, D=0.01):\n",
+    "    Re = ( rho * v * D)/mu\n",
+    "\n",
+    "    # 2. Check Logic using np.where\n",
+    "    # \"If Re < 2400, write 'Laminar', otherwise write 'Turbulent'\"\n",
+    "    flow_type = np.where(Re < 2400, \"Laminar\", \"Turbulent\")\n",
+    "    return flow_type\n",
+    "\n",
+    "velocities = np.array([0.005, 0.5, 0.01, 10.0])\n",
+    "\n",
+    "# Pass the WHOLE array at once\n",
+    "results = calc_reynolds(velocities)\n",
+    "\n",
+    "print(f\"Velocities: {velocities}\")\n",
+    "print(f\"Flow Types: {results}\")"
    ]
   },
   {
