Questions for practice

--- a/Practice_Questions.ipynb
+++ b/Practice_Questions.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "---\n",
     "\n",
-    "### 🔢 Raw Data\n",
+    "###  Raw Data\n",
     "\n",
     "```python\n",
     "raw_data = [\"Sensor_Log_01\", 150.5, 148.2, -99.9, 152.0, 149.5]\n"
@@ -70,9 +70,320 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b21205b3-ca03-4a08-9afa-e10dcca62e41",
+   "metadata": {},
+   "source": [
+    "# 🧪 Challenge 1: Lists & Mutability (The \"Data Log\")\n",
+    "\n",
+    "**Concept**: Lists are mutable; Tuples are not. Slicing extracts data.\n",
+    "\n",
+    "## Scenario:\n",
+    "\n",
+    "You have a raw data log from a generic experiment:\n",
+    "```python\n",
+    "data_log = [\"Start\", 10.5, 11.2, 9.8, 10.1, \"End\"]\n",
+    "```\n",
+    "\n",
+    "## Task:\n",
+    "\n",
+    "1. Create a new list called `readings` that contains only the numbers (slice the start and end off).\n",
+    "2. The sensor was calibrated incorrectly. Update the first number in your new `readings` list to be `10.6`.\n",
+    "3. Append the value `10.3` and `10.9` to the end of `readings`.\n",
+    "4. **Critical Thinking**: If you tried to do `data_log[0] = \"Initiate\"`, would it work? If you had a tuple `const = (9.81, 3.14)`, would `const[0] = 9.8` work?\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "385aa552-476f-4e0e-9878-13951b665001",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Readings:\n",
+      " [10.5, 11.2, 9.8, 10.1]\n",
+      "Updated Readings:\n",
+      " [10.6, 11.2, 9.8, 10.1]\n",
+      "Readings:\n",
+      " [10.6, 11.2, 9.8, 10.1, 10.3, 10.9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_log = [\"Start\", 10.5, 11.2, 9.8, 10.1, \"End\"]\n",
+    "\n",
+    "readings = data_log[1:5]\n",
+    "print(f\"Readings:\\n {readings}\")\n",
+    "\n",
+    "readings[0] = 10.6\n",
+    "print(f\"Updated Readings:\\n {readings}\")\n",
+    "\n",
+    "# readings.append([10.3, 10.9]) # This will make nested loop \n",
+    "# print(f\"Readings:\\n {readings}\")\n",
+    "readings += [10.3,10.9]\n",
+    "print(f\"Readings:\\n {readings}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67ade1ce-7f22-4fa7-bf7a-ddbff1124cde",
+   "metadata": {},
+   "source": [
+    "# ⚡ Challenge 2: NumPy Vectorization (The \"Batch Calc\")\n",
+    "\n",
+    "**Concept**: Math on arrays happens all at once (Vectorization). Boolean filtering finds specific values.\n",
+    "\n",
+    "## Scenario:\n",
+    "\n",
+    "You have the diameters of 5 different pipes (in meters):\n",
+    "```python\n",
+    "import numpy as np\n",
+    "D = np.array([0.1, 0.5, 0.02, 1.0, 0.05])\n",
+    "```\n",
+    "\n",
+    "## Task:\n",
+    "\n",
+    "1. Calculate the **Cross-Sectional Area** ($A$) for all pipes at once.\n",
+    "\n",
+    "$$A = \\pi \\left( \\frac{D}{2} \\right)^2$$\n",
+    "\n",
+    "2. Create a **Boolean Mask** to find which pipes have an Area less than $0.1 \\, m^2$.\n",
+    "\n",
+    "3. Use that mask to print the **Diameters** (not the areas) of those small pipes.\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "fc876634-29f6-4eae-8ba7-7fa3baad8af6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.1  0.5  0.02 1.   0.05]\n",
+      "[7.85398163e-03 1.96349541e-01 3.14159265e-04 7.85398163e-01\n",
+      " 1.96349541e-03]\n",
+      "Diameters, whose area is less than 0.1m^2: \n",
+      " [0.1  0.02 0.05]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "D = np.array([0.1, 0.5, 0.02, 1.0, 0.05])\n",
+    "print(D)\n",
+    "A = np.pi * (D/2)**2\n",
+    "print(A)\n",
+    "\n",
+    "#mask for the area\n",
+    "diameter = D[A<0.1]       #This is known as cross filtering\n",
+    "\n",
+    "print(f\"Diameters, whose area is less than 0.1m^2: \\n {diameter}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d143621-b0ac-4e59-a52d-f4851c5b4859",
+   "metadata": {},
+   "source": [
+    "# 🔄 Challenge 3: Loops & Logic (The \"Safety Shutoff\")\n",
+    "\n",
+    "**Concept**: `for` loops process items one by one. `break` stops the loop immediately.\n",
+    "\n",
+    "## Scenario:\n",
+    "\n",
+    "You are ramping up the temperature of a reactor.\n",
+    "```python\n",
+    "temps = [20, 25, 30, 105, 35, 40]\n",
+    "```\n",
+    "\n",
+    "## Task:\n",
+    "\n",
+    "Write a loop that:\n",
+    "\n",
+    "1. Prints `\"Temperature: {t} OK\"`.\n",
+    "2. If the temperature exceeds 100, print `\"OVERHEAT DETECTED! Stopping...\"` and stop the loop immediately (do not print 35 or 40).\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2154ce70-11af-419b-9727-71a6a2a71563",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperature: 20 OK\n",
+      "Temperature: 25 OK\n",
+      "Temperature: 30 OK\n",
+      "Temperaure: 105 OVERHEAT DETECTED! Stopping...\n"
+     ]
+    }
+   ],
+   "source": [
+    "temps = [20, 25, 30, 105, 35, 40]\n",
+    "\n",
+    "for t in temps:\n",
+    "    \n",
+    "    if t >= 100:\n",
+    "        print(f\"Temperaure: {t} OVERHEAT DETECTED! Stopping...\")\n",
+    "        break \n",
+    "    print(f\"Temperature: {t} OK\")    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25051a47-d5d3-4da2-a507-57a439dc390e",
+   "metadata": {},
+   "source": [
+    "# 🛠️ Challenge 4: The Function Handoff (The \"Black Box\")\n",
+    "\n",
+    "**Concept**: Argument passing, Scope, and `np.where`.\n",
+    "\n",
+    "## Scenario:\n",
+    "\n",
+    "You need a function to classify acidity.\n",
+    "\n",
+    "## Task:\n",
+    "\n",
+    "1. Define a function `classify_ph(ph_values)`.\n",
+    "2. Inside, use `np.where` to return `\"Acidic\"` if pH < 7.0 and `\"Not Acidic\"` otherwise (Base/Neutral).\n",
+    "3. **The Test**: Create an array outside: `sample_A = np.array([6.5, 7.2, 5.0])`.\n",
+    "4. Pass `sample_A` into your function. Does the function know it is called `sample_A`, or does it just use the data?\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Solution:\n",
+    "```python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4318743d-fba2-446c-8889-489d51d8bc00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Acidic', 'Basic', 'Acidic'], dtype='<U6')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def classify_ph(ph_values):\n",
+    "    logic = np.where(ph_values<7.0, \"Acidic\", \"Basic\")\n",
+    "    return logic \n",
+    "    \n",
+    "sample_A = np.array([6.5, 7.2, 5.0])\n",
+    "\n",
+    "classify_ph(sample_A) #argument passing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d03fb31e-7853-4393-b112-c28742dae178",
+   "metadata": {},
+   "source": [
+    "# 🏆 The Final Boss: Combined Concepts\n",
+    "\n",
+    "## Scenario:\n",
+    "\n",
+    "You are analyzing the **Ideal Gas Law** for a batch of 4 tanks.\n",
+    "\n",
+    "### Formula:\n",
+    "\n",
+    "$$P = \\frac{nRT}{V}$$\n",
+    "\n",
+    "Where:\n",
+    "- $R = 8.314$ J/(mol·K) (Global constant)\n",
+    "- $n = 2.0$ moles (Constant for all)\n",
+    "- $T = 300$ K (Constant for all)\n",
+    "\n",
+    "### Data:\n",
+    "\n",
+    "The volumes of the 4 tanks are:\n",
+    "```python\n",
+    "volumes = np.array([0.5, 1.2, 0.01, 10.0])  # m³\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Your Mission:\n",
+    "\n",
+    "Write a script that:\n",
+    "\n",
+    "1. Calculates the **Pressure** $P$ for all tanks (Vectorized math).\n",
+    "2. Uses `np.where` or Boolean masking to replace any Pressure > 100,000 Pa with `0.0` (simulating a \"Safety Valve Open\" reading).\n",
+    "3. Prints the final safe pressure readings.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "816c3398-d4ea-404f-b3f6-10c075261241",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pressure of all tanks [  9976.8    4157.   498840.      498.84]\n",
+      "Safety Valve Opening\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([9976.8 , 4157.  ,    0.  ,  498.84])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "volumes = np.array([0.5, 1.2, 0.01, 10.0])  # m³\n",
+    "\n",
+    "R = 8.314    #j/mol.k\n",
+    "n = 2        # moles\n",
+    "T = 300      # kelvin\n",
+    "\n",
+    "# pressure of all tanks\n",
+    "P = (n * R * T)/volumes\n",
+    "print(f\"Pressure of all tanks {P}\")\n",
+    "\n",
+    "P[P>100000] = 0.0\n",
+    "print(\"Safety Valve Opening\")   \n",
+    "P"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15a1952b-218d-44ea-8daf-26372110b25c",
+   "id": "fffa3831-f26d-4096-8f28-4a4717a7989d",
    "metadata": {},
    "outputs": [],
    "source": []
